# unitycatalog

./: .dockerignore  .env  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  build.sbt  compose.psql.yaml  compose.yaml  dev.Dockerfile  docker-action.sh  index.html  mkdocs.yml  requirements-docs.txt  roadmap.md  sitemap.xml  todo.md  uc-cli.dockerfile  version.sbt
ai/: CHANGELOG.md
ai/core/: README.md  UnityCatalog_AI_DevLoop.ipynb  UnityCatalog_Functions_Quickstart.ipynb  pyproject.toml
ai/core/tests/: test_local_subprocess_executor.py
ai/core/tests/core/: test_callable_utils.py  test_client.py  test_envs.py  test_execution_utils.py  test_local_executor.py  test_local_subprocess_executor.py  test_pydantic_utils.py  test_utils.py  test_validation_utils.py  test_wrapped_utils.py
ai/integrations/anthropic/: README.md  anthropic_databricks_example.ipynb  anthropic_example.ipynb  anthropic_oss_example.ipynb  anthropic_sample.ipynb  index.html  pyproject.toml
ai/integrations/anthropic/tests/: test_anthropic_toolkit.py  test_anthropic_toolkit_oss.py  test_anthropic_utils.py
ai/integrations/autogen/: README.md  autogen_example.ipynb  autogen_oss_example.ipynb  index.html  pyproject.toml
ai/integrations/autogen/tests/: test_autogen_toolkit.py  test_autogen_toolkit_oss.py  test_toolkit.py
ai/integrations/crewai/: README.md  crewai_oss_example.ipynb  index.html  pyproject.toml
ai/integrations/crewai/tests/: test_crewai_toolkit.py  test_crewai_toolkit_oss.py  test_toolkit.py
ai/integrations/langchain/: README.md  index.html  langchain_databricks_example.ipynb  langchain_oss_example.ipynb  langgraph_mlflow_databricks_example.ipynb  pyproject.toml  ucai-langchain_sample.ipynb  unitycatalog langchain with MLflow example.ipynb
ai/integrations/langchain/tests/: helper_functions.py  test_langchain_toolkit.py  (+1 more)
ai/integrations/litellm/: README.md  index.html  litellm_databricks_example copy.ipynb  litellm_databricks_example.ipynb  litellm_oss_example.ipynb  pyproject.toml
ai/integrations/llama_index/: README.md  llama_index_databricks_example.ipynb  llama_index_mlflow_databricks_example.ipynb  pyproject.toml  unitycatalog-llama_index-with-mlflow.ipynb
ai/integrations/openai/: README.md  index.html  openai_databricks_example.ipynb  openai_example.ipynb  openai_oss_example.ipynb  pyproject.toml  ucai-openai_sample.ipynb
clients/python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  requirements.txt  run-tests.sh  setup.py  tox.ini
clients/python/.openapi-generator/: FILES
clients/python/docs/: AwsCredentials.md  CatalogInfo.md  CatalogsApi.md  ColumnInfo.md  ColumnTypeName.md  CreateCatalog.md  CreateFunction.md  CreateFunctionRequest.md  CreateSchema.md  CreateTable.md  CreateVolumeRequestContent.md  DataSourceFormat.md  Dependency.md  DependencyList.md  FunctionDependency.md  FunctionInfo.md  FunctionParameterInfo.md  FunctionParameterInfos.md  FunctionParameterMode.md  FunctionParameterType.md  FunctionsApi.md  GenerateTemporaryTableCredential.md  GenerateTemporaryTableCredentialResponse.md  GenerateTemporaryVolumeCredential.md  GenerateTemporaryVolumeCredentialResponse.md  ListCatalogsResponse.md  ListFunctionsResponse.md  ListSchemasResponse.md  ListTablesResponse.md  ListVolumesResponseContent.md  SchemaInfo.md  SchemasApi.md  TableDependency.md  TableInfo.md  TableOperation.md  TableType.md  TablesApi.md  TemporaryTableCredentialsApi.md  TemporaryVolumeCredentialsApi.md  UpdateCatalog.md  (+6 more)
clients/python/test/: test_aws_credentials.py  test_catalog_info.py  test_catalogs_api.py  test_column_info.py  test_column_type_name.py  test_create_catalog.py  test_create_function.py  test_create_function_request.py  test_create_schema.py  test_create_table.py  test_create_volume_request_content.py  test_data_source_format.py  test_dependency.py  test_dependency_list.py  test_function_dependency.py  test_function_info.py  test_function_parameter_info.py  test_function_parameter_infos.py  test_function_parameter_mode.py  test_function_parameter_type.py  test_functions_api.py  test_generate_temporary_table_credential.py  test_generate_temporary_table_credential_response.py  test_generate_temporary_volume_credential.py  test_generate_temporary_volume_credential_response.py  test_list_catalogs_response.py  test_list_functions_response.py  test_list_schemas_response.py  test_list_tables_response.py  test_list_volumes_response_content.py  test_schema_info.py  test_schemas_api.py  test_table_dependency.py  test_table_info.py  test_table_operation.py  test_table_type.py  test_tables_api.py  test_temporary_table_credentials_api.py  test_temporary_volume_credentials_api.py  test_update_catalog.py  (+6 more)
clients/python/tests/: conftest.py  test_catalog.py  test_data_type_module.py  test_delta_data_type_module.py  test_delta_type_module.py  test_function.py  test_schema.py  test_table.py  test_volume.py
clients/python/unitycatalog/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
unitycatalog-ai/: LICENSE.txt  README.md  pyproject.toml
unitycatalog-ai/core/: README.md  pyproject.toml
unitycatalog-ai/dev/: databricks_functions_cleanup.py
unitycatalog-ai/integrations/anthropic/: README.md  pyproject.toml
unitycatalog-ai/integrations/autogen/: README.md  pyproject.toml
unitycatalog-ai/integrations/crewai/: README.md  pyproject.toml
unitycatalog-ai/integrations/langchain/: README.md  pyproject.toml  ucai-langchain sample.ipynb  ucai-langchain_sample.ipynb
unitycatalog-ai/integrations/llama_index/: README.md  llama_index_sample.ipynb  pyproject.toml
unitycatalog-ai/integrations/openai/: README.md  pyproject.toml  ucai-openai sdk.ipynb  ucai-openai_sample.ipynb
unitycatalog-ai/src/unitycatalog/: _base_client.py  _client.py  _exceptions.py  _files.py  _qs.py  _resource.py  _types.py  _version.py
unitycatalog-ai/tests/core/: test_callable_utils.py  test_client.py  test_databricks_client.py  test_docstring_utils.py  test_utils.py
(+2254 files in other folders)
