[project]
name = "unitycatalog-client-tests"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    # Runtime deps of unitycatalog-client (mirrors clients/python/target/requirements.txt)
    "urllib3>=1.25.3,<3.0.0",
    "python-dateutil>=2.8.2",
    "aiohttp>=3.8.4",
    "aiohttp-retry>=2.8.3",
    "pydantic>=2,<3",
    "typing-extensions>=4.7.1",
    # Test dependencies
    "requests>=2.28.0",
    "pytest>=7.2.1",
    "pytest-asyncio>=0.24.0",
]

[dependency-groups]
# Tools for building and publishing the client package (build-python-package.sh)
package-build = ["build>=1.0", "twine>=4.0"]
# Tools for generating API docs (build-docs.sh)
docs = ["pdoc==15.0.0"]

[tool.uv]
# This is a virtual project used only for dependency management, not an installable package.
package = false
