[project]
name = "unitycatalog-client-tests"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    # Runtime deps of unitycatalog-client (mirrors clients/python/target/requirements.txt)
    "urllib3>=1.25.3,<3",
    "python-dateutil>=2.8.2,<3",
    "aiohttp>=3.8.4,<4",
    "aiohttp-retry>=2.8.3,<3",
    "pydantic>=2,<3",
    "typing-extensions>=4.7.1,<5",
    # Test dependencies
    "requests>=2.28.0,<3",
    "pytest>=7.2.1,<10",
    "pytest-asyncio>=0.24.0,<2",
]

[dependency-groups]
# Tools for building and publishing the client package (build-python-package.sh)
package-build = ["build>=1.0,<2", "twine>=4.0,<7"]
# Tools for generating API docs (build-docs.sh)
docs = ["pdoc==15.0.0"]

[tool.uv]
# This is a virtual project used only for dependency management, not an installable package.
package = false
exclude-newer = "2026-03-20T00:00:00Z"
