[project]
name = "unitycatalog-client-tests"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    # Runtime deps of unitycatalog-client (mirrors clients/python/target/requirements.txt)
    "urllib3>=1.25.3,<=2.6.3",
    "python-dateutil>=2.8.2,<=2.9.0.post0",
    "aiohttp>=3.8.4,<=3.13.3",
    "aiohttp-retry>=2.8.3,<=2.9.1",
    "pydantic>=2,<=2.12.5",
    "typing-extensions>=4.7.1,<=4.15.0",
    # Test dependencies
    "requests>=2.28.0,<=2.32.5",
    "pytest>=7.2.1,<=9.0.2",
    "pytest-asyncio>=0.24.0,<=1.3.0",
]

[dependency-groups]
# Tools for building and publishing the client package (build-python-package.sh)
package-build = ["build>=1.0,<=1.4.0", "twine>=4.0,<=6.2.0"]
# Tools for generating API docs (build-docs.sh)
docs = ["pdoc==15.0.0"]

[tool.uv]
# This is a virtual project used only for dependency management, not an installable package.
package = false
exclude-newer = "2026-03-20T00:00:00Z"
