[project]
name = "unitycatalog-crewai"
version = "0.1.0"
description = "Support for Unity Catalog functions as CrewAI tools"
authors = [
    { name="Michael Berk", email="michaelberk99@gmail.com" }
]
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "unitycatalog-ai",
    "crewai>=0.67.1",
    "crewai_tools",
]

[project.optional-dependencies]
databricks = [
  # temporarily needed until unitycatalog-ai[databricks] is released
  "databricks-sdk>=0.32.0",
  "databricks-connect==15.1.0",
  #"unitycatalog-ai[databricks]"
]

databricks-dev = [
  # temporarily needed until unitycatalog-ai[databricks] is released
  "databricks-sdk>=0.32.0",
  "databricks-connect==15.1.0",
  "pytest",
  "pandas",
  "ruff==0.6.4",
  #"unitycatalog-ai[databricks-dev]"
]

dev = [
  "pytest",
  "typing_extensions",
  "databricks-sdk>=0.32.0",
  "databricks-connect",
  "ruff==0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/unitycatalog/ai/crewai/*"
]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/unitycatalog/ai/crewai"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TCH004",
  # import rules
  "TID251",
  # undefined-local-with-import-star
  "F403",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"
