[project]
name = "ucai-langchain"
version = "0.0.1"
description = "Support for Unity Catalog functions as LangChain tools"
authors = [
    { name="Serena Ruan", email="serena.ruan@databricks.com" }
]
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "ucai-core",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "typing_extensions",
  # temp needed before ucai-core[databricks] is released
  "databricks-sdk>=0.32.0",
  "databricks-connect",
  "ruff==0.6.4",
  "langgraph",
  "langchain_databricks",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/ucai_langchain/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ucai_langchain"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TCH004",
  # import rules
  "TID251",
  # undefined-local-with-import-star
  "F403",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"
