[project]
name = "ucai-llamaindex"
version = "0.0.1"
description = "Support for Unity Catalog functions as LlamaIndex tools"
authors = [
    { name="Ben Wilson", email="benjamin.wilson@databricks.com" }
]
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.9"
dependencies = [
    "llama-index>=0.11.0",
    "ucai-core",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "typing_extensions",
  # temporarily needed until ucai-core[databricks] is released
  "databricks-sdk>=0.32.0",
  "databricks-connect"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/ucai_llamaindex/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ucai_llamaindex"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TCH004",
  # import rules
  "TID251",
  # undefined-local-with-import-star
  "F403",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"